syntax = "proto3";

package uer;

service UERService {
    rpc CreateUER (CreateUERRequest) returns (UER) {}
    rpc GetUER (GetUERRequest) returns (UER) {}
    rpc ListUERs (ListUERsRequest) returns (ListUERsResponse) {}
    rpc UpdateUER (UpdateUERRequest) returns (UER) {}
    rpc DeleteUER (DeleteUERRequest) returns (DeleteUERResponse) {}
}

message UER {
    int32 id = 1;
    int32 usuario_id = 2;
    int32 empresa_id = 3;
    int32 rol_id = 4;
    string created_at = 5;
}

message CreateUERRequest {
    int32 usuario_id = 1;
    int32 empresa_id = 2;
    int32 rol_id = 3;
}

message GetUERRequest {
    int32 id = 1;
}

message ListUERsRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
}

message ListUERsResponse {
    repeated UER uers = 1;
    int32 total = 2;
}

message UpdateUERRequest {
    int32 id = 1;
    int32 usuario_id = 2;
    int32 empresa_id = 3;
    int32 rol_id = 4;
}

message DeleteUERRequest {
    int32 id = 1;
}

message DeleteUERResponse {
    bool success = 1;
}
